--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.5.1",
-    "modern-normalize": "^1.1.0"
+    "basiclightbox": "^5.0.4",
+    "modern-normalize": "^2.0.0",
+    "owl.carousel": "^2.3.4",
+    "simplelightbox": "^2.14.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.2",
     "@parcel/transformer-sass": "^2.6.0",
     "buffer": "^6.0.3",
+    "cssnano": "^6.0.1",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
