--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splidejs/splide": "^4.1.4",
     "axios": "^1.5.1",
     "basiclightbox": "^5.0.4",
+    "jquery-validation": "^1.20.0",
     "js-cookie": "^3.0.5",
     "modern-normalize": "^2.0.0",
     "owl.carousel": "^2.3.4",
